fixing styling overlapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -468,7 +468,7 @@ section:nth-of-type(4):has(ol) a {
 /* Shop Holiday gift guide */
 /******************************/
 /*  section  */
-section:nth-of-type(6) {
+section:nth-of-type(6):has(a) {
 	background: var(--color-pink-100);
 	height: 29em;
 	display: flex;
@@ -479,7 +479,7 @@ section:nth-of-type(6) {
 }
 
 /*  container  */
-section:nth-of-type(6) ul {
+section:nth-of-type(6):has(a) ul {
 	height: 17em;
 	display: flex;
 	flex-direction: row;
@@ -489,14 +489,14 @@ section:nth-of-type(6) ul {
 }
 
 /*  container img  */
-section:nth-of-type(6) ul img {
+section:nth-of-type(6):has(a) ul img {
 	width: 100%;
 	height: 15em;
 	border-radius: 0.3em;
 }
 
 /*  container p   */
-section:nth-of-type(6) ul p {
+section:nth-of-type(6):has(a) ul p {
 	color: var(--color-white);
 	font-size: var(--font-size-large);
 	font-family: var(--font-family2);
@@ -509,7 +509,7 @@ section:nth-of-type(6) ul p {
 }
 
 /*  a  */
-section:nth-of-type(6) a:last-child {
+section:nth-of-type(6):has(a) a:last-child {
 	border-radius: 0.5em;
 	border-color: transparent;
 	border: 0.1em solid var(--color-gray-dark);
